# CamSync

./: CMakeLists.txt  CamSync.cpp  FileRetrieval.css  FileRetrieval.html  README.md  app.py  index.html
Dummy Files/: Bat.bat
templates/: README.md  index.html
uploads/: Image.png.enc
